[package]
name = "vrf_with_verification"

version = "0.1.0"
authors = ["Band Protocol <dev@bandprotocol.com>"]
edition = "2018"

[profile.release]
debug = true

[dependencies]
hex = { version = "0.4.3" }
rug = { version = "1.13.0" }
num = { version = "0.4.0" }
sha2 = { version = "0.9.5" }
sha3 = { version = "0.9.1" }
lazy_static = { version = "1.4.0" }
